fix modal form input field spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -128,7 +128,7 @@ height: 100%;
   // add new client button
   .add-new-client {
     border: none;
-    margin-top: 20px;
+    margin-top: 25px;
   }
 }
 
@@ -152,7 +152,7 @@ height: 100%;
     font-family: "gotham condensed";
     font-size: 1.1em;
     letter-spacing: 4px;
-    padding-top: 10px;
+    padding-top: 25px;
   }
   // link to send email
   a {
