--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -4,8 +4,8 @@
 
 .users-forms {
   text-align: center;
-  // facebook button
-  .facebook {
+  // users-form-header button
+  .users-form-header {
     border-bottom: 1px solid #d3d3d3;
     margin-bottom: 20px;
     padding-bottom: 20px;
